deployment/visual-kube-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visual-kube-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visual-kube-app
  template:
    metadata:
      labels:
        app: visual-kube-app
    spec:
      containers:
        - name: visual-kube-app
          image: visual-kube-app:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
            limits:
              cpu: "500m"
              memory: "500Mi"
