deployment/kube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-access-log: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.test # .local not work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: visual-kube-app
            port:
              number: 80  # ClusterIP port!
